Add helpful detailed instructions link

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -38,9 +38,14 @@ ember new my-app
     <% end %>
   </div>
 
-  <div class="info">
-    <a href="/builds">More downloads</a>
-  </div>
+  <ul class="info">
+    <li>
+      <a href="/guides">Read the guides</a>
+    </li>
+    <li>
+      <a href="/builds">More downloads</a>
+    </li>
+  </ul>
 
   <ul class="social">
     <li class="twitter">
